# gideon

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  VERSIONING.md  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-backend.yml  unit-tests.yml
backend/: .env.test  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/docker/: Dockerfile  entrypoint.sh
backend/scripts/: create_admin.py
backend/tests/: conftest.py  factories.py  test_chunking_observability.py  test_config.py  test_db_schema.py  test_document_listing.py  test_document_prompt_endpoints.py  test_document_upload_integration.py  test_entity_integration.py  test_extraction_integration.py  test_extraction_observability.py  test_hashing.py  test_health.py  test_ingestion_pipeline_integration.py  test_integration.py  test_logging.py  test_observability.py  test_permissions.py  (+6 more)
cli/: pyproject.toml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  CLI.md  DEPLOYMENT.md  DEVELOPERS_LOG.md  ERD.md  FEATURES.md  INFRASTRUCTURE.md  LOCAL_DEPLOYMENT.md  OBSERVABILITY.md  SETTINGS.md  TOC.md
infrastructure/: DEPLOYMENT.md  docker-compose.integration.yml  docker-compose.local-build.yml  docker-compose.override.yml.example  docker-compose.yml
scripts/: README.md  collect-environment.ps1  collect-environment.sh  seed_demo.py
sdk/: pyproject.toml
shared/: pyproject.toml
(+57 files in other folders)
